# pithos

./: .gitignore  .tool-versions  Justfile  README.md  activate.zsh  go.work  setup.sh
examples/cpp/proto-demo/: CMakeLists.txt  main.cpp
examples/cpp/starter/: main.cpp
examples/go/proto-demo/: go.mod  main.go
examples/go/starter/: go.mod  main.go
examples/python/proto-demo/: main.py  pyproject.toml  test_main.py
examples/rust/starter/src/: main.rs
idl/common/: user.proto
libs/cpp/user_utils/: CMakeLists.txt  utils.cpp  utils.h
libs/go/timeutils/: go.mod  time.go
libs/python/stringutils/: __init__.py  utils.py
scripts/: hello.py
templates/cpp/: CMakeLists.txt
tools/: gen_compile_db.py  just.zsh  pithos_runner.py
tools/cmake/: PithosCXX.cmake
